--- a/frontend/src/components/Auth/Login.css
+++ b/frontend/src/components/Auth/Login.css
@@ -1,8 +1,6 @@
-/* Login.css */
-
 body {
-  background-color: #141414; /* Netflix dark background */
-  color: #e5e5e5; /* Netflix light text */
+  background-color: #141414;
+  color: #e5e5e5;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   height: 100vh;
   display: flex;
@@ -14,7 +12,7 @@ body {
 .container {
   max-width: 450px;
   padding: 2rem;
-  background-color: #2c2c2c; /* Slightly lighter than the background */
+  background-color: #2c2c2c;
   border-radius: 10px;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.75);
 }
@@ -77,7 +75,7 @@ form {
 }
 
 .link {
-  color: #e50914; /* Netflix red for links */
+  color: #e50914;
   text-align: center;
   margin-top: 1rem;
 }
