--- a/frontend/src/components/Room/Room.css
+++ b/frontend/src/components/Room/Room.css
@@ -3,16 +3,17 @@ body {
   color: #e5e5e5;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   height: 100vh;
+  margin: 0;
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 0;
 }
 
 .container {
-  max-width: 450px;
-  padding: 2rem;
+  max-width: 900px;
+  width: 100%;
   background-color: #2c2c2c;
+  padding: 2rem;
   border-radius: 10px;
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.75);
 }
@@ -22,17 +23,6 @@ h4 {
   text-align: center;
   margin-bottom: 1.5rem;
   font-weight: 700;
-}
-
-.alert {
-  margin-bottom: 1rem;
-  background-color: #b81d24;
-  color: #ffffff;
-}
-
-form {
-  display: flex;
-  flex-direction: column;
 }
 
 .textField input {
@@ -74,18 +64,28 @@ form {
   background-color: #f40612;
 }
 
-.link {
+.videoPlayer {
+  width: 100%;
+  margin-top: 2rem;
+}
+
+.chatContainer {
+  margin-top: 2rem;
+  background-color: #1c1c1c;
+  padding: 1rem;
+  border-radius: 5px;
+}
+
+.chatContainer h5 {
   color: #e50914;
-  text-align: center;
-  margin-top: 1rem;
 }
 
-.link a {
-  color: inherit;
+.link {
+  color: #e5e5e5;
   text-decoration: none;
-  font-weight: bold;
+  font-weight: 500;
 }
 
-.link a:hover {
-  text-decoration: underline;
+.link:hover {
+  color: #e50914;
 }
